# kg-microbe-paper

./: .gitignore  BUTYRATE_LITERATURE_REVIEW.md  CLAUDE.md  LICENSE  Makefile  QUANTITATIVE_VALIDATION_SUMMARY.md  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  pyproject.toml  run_classification.sh  run_classification.sl  test_reorganization.sh
data/: Figure6C_Comprehensive_Validation_Report.md  Figure6C_Validation_Summary_Tables.csv  shap_feature_importance_class_temperature_psychrophilic_temperature__EC_RHEA_v5.tsv
docs/: FIGURE6_VALIDATION_README.md  FINAL_VALIDATION_SUMMARY.md  README.md  SPECIFIC_PUBLICATIONS_QUANTITATIVE_EVIDENCE.md
notes/: CORRECTED_FIGURE6_ANALYSIS.md  REPOSITORY_COMPARISON.md  VALIDATION_IMPLEMENTATION_SUMMARY.md
scripts/: build_evidence_bundle_manifest.py
src/: Classification_gold_standard_comparison.py  Classification_gold_standard_comparison_optimized.py  Competencies.py  Functional_Annotations.py  Functional_Annotations_EC.py  Gold_standard_Competency_analysis.py  Makefile  Process_competency_questions.py  Vital_gold_standard.py  _cache_utils.py  classification.py  classification_permutations.py  classification_utils.py  competency_questions_kg-microbe.sh  competency_questions_kg-microbe_duckdb.sh  competency_questions_kg-microbe_shortened.sh  constants.py  create_figure6_validation_report.py  duckdb_utils.py  figure6_competency_queries.py  figure6_sensitivity_analysis.py  gut_microbes_competencies.py  kg_microbe_train_taxa_to_temperature__EC_RHEA.ipynb  ncbi_phylogeny_search.py  prefilter_edges.sh  prefix-prefix.py  (+6 more)
(+142 files in other folders)
