[project]
name = "myproject"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tqdm==4.67.1",
    "matplotlib==3.10.0",
    "matplotlib-venn==1.1.1",
    "statsmodels==0.14.4",
    "equilibrator-api==0.6.0",
    "owlready2==0.47",
    "catboost==1.2.7",
    "scikit-learn==1.6.1",
    "shap==0.46.0",
    "seaborn==0.13.2",
    "kaleido==0.2.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "duckdb==1.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

